--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
     "vue": "^2.6.12",
+    "vue-plugin-load-script": "^1.3.2",
     "vue-router": "^3.4.7"
   },
   "browserslist": [
@@ -27,6 +29,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "execa": "latest",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
