--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
+    "firebase": "^8.2.3",
     "vue": "^2.6.12",
     "vue-plugin-load-script": "^1.3.2",
-    "vue-router": "^3.4.7"
+    "vue-router": "^3.4.7",
+    "vuex": "^3.6.0"
   },
   "browserslist": [
     "> 1%",
