--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.12",
     "vue-plugin-load-script": "^1.3.2",
     "vue-router": "^3.4.7",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "watson-developer-cloud": "^4.0.1"
   },
   "browserslist": [
     "> 1%",
